<resources>

    <string name="app_name">Chương trình đổi tiền</string>
    <string name="author">Nguyễn Trường Hưng - 1150070013</string>
    <string name="computer">Tên máy: LAPTOP-HP</string>
    <string name="textbox_hint">Nhập số tiền</string>

    <string name="usd_name">American Dollar</string>
    <string name="eur_name">European Cash</string>
    <string name="gbp_name">Greate Britain</string>
    <string name="aud_name">Australia Dollar</string>
    <string name="cad_name">Canadian Dollar</string>
    <string name="zar_name">South Africa Rand</string>
    <string name="nzd_name">New Zealand Dollar</string>
    <string name="vnd_name">Việt Nam Đồng</string>
    <string name="inr_name">Indian Rupe</string>
    <string name="jpy_name">Yên Nhật</string>

    <string name="usd_unit">USD</string>
    <string name="eur_unit">EUR</string>
    <string name="gbp_unit">GBP</string>
    <string name="inr_unit">INR</string>
    <string name="aud_unit">AUD</string>
    <string name="cad_unit">CAD</string>
    <string name="zar_unit">ZAR</string>
    <string name="nzd_unit">NZD</string>
    <string name="jpy_unit">JPY</string>
    <string name="vnd_unit">VNĐ</string>

    <string name="from_label">From</string>
    <string name="to_label">To</string>
    <string name="btn_convert">Convert</string>
    <string name="result_label">Kết quả</string>
</resources>
